metadata/force-app/main/default/objects/CustomName_FpHoq__c/CustomName_FpHoq__c.object-meta.xml
<CustomObject>
    <description>Description_uMaCH</description>
    <label>CustomLabel_bAosn</label>
    <nameField>
        <label>CustomLabel_bAosn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bAosns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>