metadata/force-app/main/default/objects/CustomName_FpHoq__c/fields/CustomField_fYYVu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_fYYVu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldQtlAi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>