metadata/force-app/main/default/objects/CustomName_FpHoq__c/fields/CustomField_zVVwk__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zVVwk__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmGWBC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>